--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Batter Life</title>
     <link rel="shortcut icon" href="assets/453bc3fc-b4af-4ae7-ac4e-0c210ee3c447.jpg" type="image/x-icon">
+
+    <!-- Font Awasome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Font Awasome -->
 
     <!-- Tailwind + ddaisyUI -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
@@ -14,7 +21,195 @@
     <!-- Css File Link -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
+    <!-- Navbar -->
+    <div class="navbar bg-gray-200 shadow-sm">
+        <div class="navbar-start">
+            <div class="dropdown">
+                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M4 6h16M4 12h8m-8 6h16" />
+                    </svg>
+                </div>
+                <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+                    <li><a class="font-bold text-base" href="#productSec">কিউটন ক্যাপসুল</a></li>
+                    <li><a class="font-bold text-base" href="#detailsProduct">বিস্তারিত</a></li>
+                    <li><a class="font-bold text-base" href="#orderCart">অর্ডার ফরম</a></li>
+                </ul>
+            </div>
+            <a class="btn btn-ghost text-xl"><img class="h-10" src="assets/453bc3fc-b4af-4ae7-ac4e-0c210ee3c447.jpg"
+                    alt="logo"></a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1">
+                <li><a class="font-bold text-base" href="#productSec">কিউটন ক্যাপসুল</a></li>
+                <li><a class="font-bold text-base" href="#detailsProduct">বিস্তারিত</a></li>
+                <li><a class="font-bold text-base" href="#orderCart">অর্ডার ফরম</a></li>
+            </ul>
+        </div>
+        <div class="navbar-end">
+            <a href="tel:01973085033" class="btn btn-neutral">📞 Call Us</a>
+        </div>
+    </div>
+    <!-- Navbar -->
+
+    <!-- Product Section -->
+    <div id="productSec" class="hero bg-slate-900 min-h-screen text-white px-4 sm:px-6 lg:px-20">
+        <div class="hero-content flex flex-col lg:flex-row items-center gap-8">
+
+            <!-- Product Image -->
+            <img src="assets/WhatsApp Image 2025-09-15 at 22.04.14_badaa6ac.jpg"
+                class="w-full max-w-xs sm:max-w-sm lg:max-w-md rounded-lg shadow-2xl" />
+
+            <!-- Product Details -->
+            <div class="text-center lg:text-left space-y-4">
+                <h1 class="text-4xl sm:text-5xl font-bold">কিউটন ক্যাপসুল (Q-Tone)</h1>
+                <h3 class="text-base sm:text-base font-bold pb-5">সরকারি অনুমোদিত কোম্পানির প্রোডাক্ট (Q-Tone)</h3>
+
+                <p class="text-xl sm:text-2xl py-1 font-bold">
+                    💰 রেগুলার দাম: <del class="text-red-600">১৩৫০</del> টাকা
+                </p>
+
+                <p class="text-xl sm:text-2xl mb-3 font-bold">
+                    🔥 আজ অর্ডার করলে ডিসকাউন্টে পাচ্ছেন মাত্র <span class="text-green-500">১২০০</span> টাকায়!
+                </p>
+
+                <button class="btn btn-block bg-red-600 text-white py-10 sm:py-6 text-3xl">
+                    অর্ডার করুন
+                </button>
+            </div>
+
+        </div>
+    </div>
+
+
+
+    <!-- Countdown Timer -->
+    <h2 class="text-center text-3xl md:text-5xl font-bold text-red-600 mt-10">অফার শেষ হতে বাকি!!!</h2>
+    <div class="flex justify-center gap-6 p-6 text-center">
+        <!-- Days -->
+        <div class="flex flex-col bg-gray-800 text-white rounded-lg p-4 w-20">
+            <span id="days" class="text-4xl font-mono">0</span>
+            <span class="text-sm">Days</span>
+        </div>
+
+        <!-- Hours -->
+        <div class="flex flex-col bg-gray-800 text-white rounded-lg p-4 w-20">
+            <span id="hours" class="text-4xl font-mono">0</span>
+            <span class="text-sm">Hours</span>
+        </div>
+
+        <!-- Minutes -->
+        <div class="flex flex-col bg-gray-800 text-white rounded-lg p-4 w-20">
+            <span id="minutes" class="text-4xl font-mono">0</span>
+            <span class="text-sm">Minutes</span>
+        </div>
+
+        <!-- Seconds -->
+        <div class="flex flex-col bg-gray-800 text-white rounded-lg p-4 w-20">
+            <span id="seconds" class="text-4xl font-mono">0</span>
+            <span class="text-sm">Seconds</span>
+        </div>
+    </div>
+
+
+    <!-- Details -->
+    <section id="detailsProduct" class="bg-slate-900 p-10">
+        <video class="m-auto" width="440" height="260" controls>
+            <source src="assets/WhatsApp Video 2025-09-15 at 22.02.31_83d5cb3b.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <ul class="text-center text-white pt-10 text-xl font-bold">
+            <li>🔰 তৃতীয় দিন থেকেই পরিবর্তন অনুভব করুন!</li>
+            <li class="pt-6">💪 দ্রুত কার্যকর ও দীর্ঘস্থায়ী হালাল হারবাল সল্যুশন — শতভাগ ভরসাযোগ্য।</li>
+            <li class="pt-6">✅ সরকারি অনুমোদিত কোম্পানির প্রোডাক্ট (Q-Tone)</li>
+            <li class="pt-6">📦 সারাদেশে ফ্রি হোম ডেলিভারি</li>
+            <li class="pt-6">🧠 মানসিক শান্তি ও আত্মবিশ্বাস ফিরে পেতে আজই শুরু করুন।</li>
+            <li class="pt-6 leading-9">✅ আলহামদুলিল্লাহ! হাজারো মানুষ উপকৃত হয়েছেন।
+            <li class="pt-6 leading-9">📞 অর্ডার করতে কল করুন : <a href="tel:01973085033"
+                    class="text-red-500">01973085033</a></li>
+        </ul>
+    </section>
+
+
+    <!-- Order Cart -->
+    <section id="orderCart" class="flex justify-center items-center pt-16 pb-16 bg-green-500 px-5 sm:px-0">
+        <!-- Order Cart -->
+        <section class="bg-white p-4 sm:p-6 rounded-xl shadow-lg w-full max-w-[380px] mx-auto mt-10 sm:mt-20">
+            <h3 class="text-xl sm:text-2xl font-bold mb-4 text-center">ক্যাশ অন ডেলিভারিতে অর্ডার করতে নিচের ফরমটি পূরন
+                করুন</h3>
+
+            <!-- Product Section -->
+            <div class="flex items-center gap-3 sm:gap-4 mb-5 sm:mb-6">
+                <img src="assets/WhatsApp Image 2025-09-15 at 22.04.14_badaa6ac.jpg" alt="Product"
+                    class="w-20 h-20 sm:w-24 sm:h-24 object-cover rounded-lg">
+                <div class="flex-1">
+                    <h3 class="font-semibold text-base sm:text-lg">কিউটন ক্যাপসুল</h3>
+                    <p class="text-gray-600 text-sm sm:text-base">মূল্য : <span id="price">1200</span> BDT</p>
+
+                    <!-- Quantity Control -->
+                    <div class="flex items-center mt-2">
+                        <button id="decrease"
+                            class="bg-gray-200 px-2 sm:px-3 py-1 rounded-l hover:bg-gray-300 text-lg sm:text-base">-</button>
+                        <input type="text" id="quantity" value="1" readonly
+                            class="w-10 sm:w-12 text-center border-t border-b border-gray-200 text-base sm:text-base">
+                        <button id="increase"
+                            class="bg-gray-200 px-2 sm:px-3 py-1 rounded-r hover:bg-gray-300 text-lg sm:text-base">+</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Total Price -->
+            <div class="mb-5">
+                <p class="font-semibold text-lg text-center">Total: <span id="totalPrice">1200</span> BDT</p>
+            </div>
+
+            <!-- User Details -->
+            <div class="mb-3 sm:mb-4">
+                <label class="block mb-1 font-medium text-sm sm:text-base">Your Name</label>
+                <input type="text" id="name" placeholder="Enter your name"
+                    class="w-full border border-gray-300 rounded px-2 sm:px-3 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400 text-sm sm:text-base">
+            </div>
+
+            <div class="mb-3 sm:mb-4">
+                <label class="block mb-1 font-medium text-sm sm:text-base">Phone Number</label>
+                <input type="tel" id="phone" placeholder="Enter your phone number"
+                    class="w-full border border-gray-300 rounded px-2 sm:px-3 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400 text-sm sm:text-base">
+            </div>
+
+            <div class="mb-3 sm:mb-4">
+                <label class="block mb-1 font-medium text-sm sm:text-base">Address</label>
+                <textarea id="address" placeholder="Enter your address"
+                    class="w-full border border-gray-300 rounded px-2 sm:px-3 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400 text-sm sm:text-base"></textarea>
+            </div>
+
+            <!-- Buy Button -->
+            <button id="buyBtn"
+                class="w-full bg-black text-white py-2 rounded hover:bg-indigo-600 transition text-sm sm:text-base">
+                <i class="fa-solid fa-truck-fast"></i> COMPLETE ORDER
+            </button>
+        </section>
+    </section>
+
+
+    <!-- Footer -->
+    <footer class="footer sm:footer-horizontal bg-neutral text-neutral-content p-10">
+        <aside>
+            <img class="h-20" src="assets/453bc3fc-b4af-4ae7-ac4e-0c210ee3c447.jpg" alt="">
+            <p class="text-2xl leading-10">
+                Better Life
+                <br />
+                অর্ডার করতে কল করুন: <a href="tel:01973085033" class="text-blue-500" href=""> 📞 01973085033</a>
+            </p>
+        </aside>
+    </footer>
+
+
+    <script src="js/script.js"></script>
 </body>
+
 </html>
