Update Order Button

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                     🔥 আজ অর্ডার করলে ডিসকাউন্টে পাচ্ছেন মাত্র <span class="text-green-500">১২০০</span> টাকায়!
                 </p>
 
-                <button class="btn btn-block bg-red-600 text-white py-10 sm:py-6 text-3xl">
-                    অর্ডার করুন
-                </button>
+                <a href="#orderCart"><button class="btn btn-block bg-red-600 text-white py-10 sm:py-6 text-3xl">
+                        অর্ডার করুন
+                    </button></a>
             </div>
 
         </div>
